--- a/myapp/views/contributor.handlebars
+++ b/myapp/views/contributor.handlebars
@@ -1,8 +1,38 @@
 <html>
 <head>
-	<title>Contributor</title>
+	<title>Contributors- {{all.repo}}</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 </head>
 <body>
-	Hello world
+	<nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
+<div class="row" style="margin-left:5%">
+	{{#all.con}}
+	    <div class="col s10 m5 l5 xs10">
+          <div class="card" style="margin: 2rem 2rem;">
+          	<a href="{{hurl}}"><span class="card-title" style='margin-left:2%; width:100%; text-overflow: ellipsis;font-size: 18px; color: red'>{{name}}</span></a>
+            <a href="{{hurl}}"><div class="card-image">
+              <img src="{{picture}}" style="width: 40%; margin-left:auto; margin-right:auto;">
+            </div></a>
+            <div class="card-content">
+              <p style="color:green; font-size:22px	">{{count}}&nbsp commits</p>
+            </div>
+          </div>
+        </div>            
+	{{/all.con}}
+</div>
+
 </body>
 </html>
