--- a/myapp/views/contributor.handlebars
+++ b/myapp/views/contributor.handlebars
@@ -1,33 +1,133 @@
 <html>
 <head>
 	<title>Contributors- {{all.repo}}</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+
+   <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Tangerine">
+   <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Tillana">
+   <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Yatra One">
+   <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Vollkorn">
+
+<link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+
+
+<script>
+         $(function() {
+            $( "#dialog-1" ).dialog({
+               autoOpen: false,  
+            });
+            
+         });
+      </script>
+
+
+  <script type="text/javascript">
+
+         $(function() {
+            $( "#dialog-4" ).dialog({
+               autoOpen: false, 
+               modal: true,
+               buttons: {
+                  OK: function() {$(this).dialog("close");}
+               },
+            });
+         });
+
+  </script>
+
+  <script type="text/javascript">
+
+    function know_more (a) {
+      // body...
+      $.ajax({
+        url: 'https://api.github.com/users/'+a,
+          method:'GET',
+          dataType: 'json',
+          headers: {
+            "accept": "application/json",
+            "User-Agent": {{all.ua}}
+          },
+        success: function(data){
+          console.log(data);
+
+          if(data.location==null) data.location="Not available";
+          if(data.company==null) data.company="Not available";
+
+
+          $("#dialog-1").html("<p style='font-size:18px; color: green'>Name: "+data.name+"</p><p style='font-size:18px; color: green'>Works at: "+data.company+"</p><p style='font-size:18px; color: green'>Followers: "+data.followers+"</p><p style='font-size:18px; color: green'>Location: "+data.location+"</p>");
+
+          $( "#dialog-1" ).dialog( "open" );
+         
+        },
+      error: function(xhr, status, error) {
+          console.log(error);
+        },
+    });
+    }
+
+  </script>
 </head>
+
+
 <body>
+
+<div id="dialog-1" title="About Contributor">
+</div>
+
+
+
 	<nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper" style="font-family: Tangerine">
+      <a href="#" class="brand-logo" style="font-size: 2.5rem">{{all.repo}} &nbsp Contributors</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="/home" style="font-size: 2rem">Home</a></li>
+        <li><a href="/redis" style="font-size: 2rem">Repos</a></li>
+        <li><a href="/exit" style="font-size: 2rem">Exit</a></li>
       </ul>
     </div>
   </nav>
 
 
-<div class="row" style="margin-left:5%">
+  	 <div class="row">
+  	 	<div class= "col-md-3">
+  	 	</div>
+        <div class="col s12 m6">
+           <div class="card" style="margin: 2rem 2rem;">
+          	<a href="{{all.repobody.html_url}}"><p class="card-title" style='margin-left:2%; width:100%; text-overflow: ellipsis;font-size: 23px; color: red; text-align:center; font-family: Tillana'>{{all.repo}}</p></a>
+            <a href="{{rurl}}"><div class="card-image">
+              <img src="{{all.repobody.owner.avatar_url}}" style="width: 30%; margin-left:auto; margin-right:auto;">
+            </div></a>
+            <div class="card-content">
+              <p style="font-size: 20px; font-family: Vollkorn">{{all.repobody.description}}</p>
+              <p style="color:green; font-size:22px; font-family: Yatra One;	">{{all.repobody.forks}}&nbsp forks</p>
+            </div>
+          </div>
+        </div>
+      </div> 
+
+
+<div class="row" >
 	{{#all.con}}
-	    <div class="col s10 m5 l5 xs10">
+	    <div class="col s6 m4 l4 xs6">
           <div class="card" style="margin: 2rem 2rem;">
-          	<a href="{{hurl}}"><span class="card-title" style='margin-left:2%; width:100%; text-overflow: ellipsis;font-size: 18px; color: red'>{{name}}</span></a>
+          	<a href="{{hurl}}"><p class="card-title" style='margin-left:2%; width:100%; text-overflow: ellipsis;font-size: 18px; color: red; text-align:center; font-family: Tillana' >{{name}}</p></a>
             <a href="{{hurl}}"><div class="card-image">
               <img src="{{picture}}" style="width: 40%; margin-left:auto; margin-right:auto;">
             </div></a>
             <div class="card-content">
-              <p style="color:green; font-size:22px	">{{count}}&nbsp commits</p>
+              <p style="color:green; font-size:22px; font-family:Yatra One	">{{count}}&nbsp commits</p>
+            </div>
+            <div class="card-action">
+
+              <button class="btn btn-default" onclick="know_more('{{name}}')" style="padding-left:1%; padding-right:1%; font-family:Vollkorn">Know More</button>
+              <a href="{{hurl}}"><button class="btn btn-default" style="font-family:Vollkorn; padding-left:1%; padding-right:1%">GitHub Profile</button></a>
+              
             </div>
           </div>
         </div>            
